# Venix

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  flake.nix  kb.pcap  rustc-ice-2024-10-14T17_25_44-130676.txt  rustc-ice-2024-10-14T17_25_47-130695.txt  rustc-ice-2024-10-14T17_26_06-130740.txt  rustc-ice-2024-10-14T17_26_24-130791.txt  rustc-ice-2024-10-14T17_26_40-130820.txt  rustc-ice-2025-11-25T18_11_41-232126.txt  rustc-ice-2025-11-25T20_08_56-268065.txt
assets/: OVMF_CODE.fd
init/src/: main.rs
patches/: ncurses.patch  zsh.patch
src/: main.rs
sysroot/lib/: libc.so.6
sysroot/usr/include/: curses.h
sysroot/usr/include/abi-bits/: signal.h
sysroot/usr/share/zsh/5.9.0.2-test/functions/: _run-help  run-help
