[package]
name = "Venix"
version = "0.2.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0"
fatfs = { version = "0.3", default-features = false, features = [
      "std",
      "alloc",
] }
git2 = "0.19"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
init = { path = "init", artifact = "bin", target = "x86_64-unknown-none" }
tempfile = "3.3"
gpt = "3.0"
walkdir = "2.5"

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = [ "init","kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
